frontend/apihub-frontend-react/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apihub-frontend-react-prod-svc
  namespace: development
spec:
  selector:
    app: apihub-frontend-react-prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
