frontend/apihub-frontend-react/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: apihub-frontend-react-prod
  name: apihub-frontend-react-prod
  namespace: development
spec:
  rules:
  - host: flighthub-react-prod.tripota.com.vn
    http:
      paths:
      - backend:
          service:
            name: apihub-frontend-react-prod-svc
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - flighthub-react-prod.tripota.com.vn
    secretName: apihub-frontend-react-prod-tls
